fix: correct react path to import-helpers and remove useless setup prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
       {
         "newlinesBetween": "always",
         "groups": [
-          "/^react",
+          "/^react/",
           "module",
           ["/^@components/", "/^@services/", "/^@contexts"],
           ["/^@pages/", "/@assets/", "/^@constants/"],
