--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "env-cmd": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
@@ -65,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
